[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/shadow1.png" type="Texture" id=2]
[ext_resource path="res://assets/runner/t1.png" type="Texture" id=3]
[ext_resource path="res://assets/runner/c1.png" type="Texture" id=4]
[ext_resource path="res://assets/runner/c2.png" type="Texture" id=5]
[ext_resource path="res://assets/runner/t2.png" type="Texture" id=6]
[ext_resource path="res://assets/runner/f1.png" type="Texture" id=7]
[ext_resource path="res://assets/runner/f2.png" type="Texture" id=8]
[ext_resource path="res://assets/runner/f3.png" type="Texture" id=9]
[ext_resource path="res://assets/runner/f4.png" type="Texture" id=10]
[ext_resource path="res://assets/runner/f5.png" type="Texture" id=11]
[ext_resource path="res://assets/runner/f6.png" type="Texture" id=12]
[ext_resource path="res://assets/runner/f7.png" type="Texture" id=13]
[ext_resource path="res://assets/runner/f8.png" type="Texture" id=14]
[ext_resource path="res://assets/particle.png" type="Texture" id=15]
[ext_resource path="res://assets/sounds/Area 51 SF part 1/Otan Pernei Nitro.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/Japanese_Battle_Music_-_Warrior_Princess.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/NOMA - Brain Power (Off-Vocal).ogg" type="AudioStream" id=18]
[ext_resource path="res://assets/sounds/Area 51 SF part 3/telostragoui.ogg" type="AudioStream" id=19]
[ext_resource path="res://scenes/TimeIndicator.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/fonts/Supercell-Magic_5.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://assets/sounds/Area 51 SF part 1/Play Button.wav" type="AudioStream" id=22]
[ext_resource path="res://CRT_Shader.tscn" type="PackedScene" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "Hit",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 63.27
flag_disable_z = true
spread = 115.34
flatness = 0.17
gravity = Vector3( -100, 0, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[sub_resource type="AudioStreamSample" id=5]

[sub_resource type="Animation" id=6]
resource_name = "End"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cam:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 900, -600 ), Vector2( 1834, -1016 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ending/Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0298207, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 21 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Graphics" type="Node2D" parent="."]
position = Vector2( -1.99026, -7.96106 )

[node name="Sprite" type="Sprite" parent="Graphics"]
position = Vector2( -4.64395, 27.2003 )
scale = Vector2( 2, 1 )
texture = ExtResource( 2 )

[node name="Anime" type="AnimatedSprite" parent="Graphics"]
position = Vector2( 15.1984, -26.6359 )
frames = SubResource( 1 )
animation = "Run"
frame = 7
playing = true

[node name="Colli" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Cam" type="Camera2D" parent="."]
modulate = Color( 0.886275, 0.588235, 0.588235, 1 )
position = Vector2( 600, 0 )
current = true
process_mode = 0
limit_smoothed = true
drag_margin_h_enabled = false
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.0
drag_margin_top = 1.0
drag_margin_right = 0.0
drag_margin_bottom = 1.0
editor_draw_drag_margin = true

[node name="Particles" type="Particles2D" parent="."]
visible = false
modulate = Color( 0.678431, 0.686275, 0.937255, 0.737255 )
material = SubResource( 3 )
position = Vector2( -95.6821, -10.6758 )
scale = Vector2( 2, 0.5 )
amount = 50
speed_scale = 3.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 15 )

[node name="Portacles" type="Particles2D" parent="."]
visible = false
modulate = Color( 0.807843, 0.490196, 0.937255, 0.831373 )
material = SubResource( 3 )
position = Vector2( -97.2297, -22.2825 )
scale = Vector2( 2, 0.5 )
amount = 150
lifetime = 2.0
speed_scale = 10.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 15 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 5 )
autoplay = true

[node name="Nitro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="Yeah" type="AudioStreamPlayer2D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -50.0
autoplay = true

[node name="Hype" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -10.0

[node name="End" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="MusicFader" type="Timer" parent="."]
wait_time = 0.1

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="AnimeEnding" type="AnimationPlayer" parent="."]
anims/End = SubResource( 6 )

[node name="Ending" type="CanvasLayer" parent="."]

[node name="TimeIndicator" parent="Ending" instance=ExtResource( 20 )]
visible = false
margin_left = -77.1128
margin_top = 303.48
margin_right = -37.1128
margin_bottom = 343.48

[node name="Control" type="Node2D" parent="Ending"]
editor/display_folded = true
visible = false
position = Vector2( -50, 0 )

[node name="Grats" type="Label" parent="Ending/Control"]
margin_left = 300.0
margin_top = 39.5
margin_right = 800.0
margin_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 7 )
text = "You barely escaped from Area 51!"
align = 1
valign = 1

[node name="Items" type="Label" parent="Ending/Control"]
visible = false
margin_left = 288.5
margin_top = 90.5
margin_right = 811.5
margin_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "Secrets you uncovered:"
align = 1
valign = 1

[node name="Item1" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 140.5
margin_right = 911.5
margin_bottom = 159.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Sprite1" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 150 )

[node name="Sprite2" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 200 )

[node name="Sprite3" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 250 )

[node name="Sprite4" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 300 )

[node name="Sprite8" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 297.545, 500 )

[node name="Sprite5" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 350 )

[node name="Sprite6" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 400 )

[node name="Sprite7" type="Sprite" parent="Ending/Control"]
visible = false
position = Vector2( 300, 450 )

[node name="Item2" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 190.5
margin_right = 911.5
margin_bottom = 209.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Item3" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 240.5
margin_right = 911.5
margin_bottom = 259.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Item4" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 290.5
margin_right = 911.5
margin_bottom = 309.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Item5" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 340.5
margin_right = 911.5
margin_bottom = 359.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Item6" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 390.5
margin_right = 911.5
margin_bottom = 409.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Item7" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 440.5
margin_right = 911.5
margin_bottom = 459.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Item8" type="Label" parent="Ending/Control"]
visible = false
margin_left = 388.5
margin_top = 490.5
margin_right = 911.5
margin_bottom = 509.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "You managed to uncover the following items:"
valign = 1

[node name="Time" type="Label" parent="Ending/Control"]
visible = false
margin_left = 300.0
margin_top = 539.5
margin_right = 800.0
margin_bottom = 560.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 7 )
text = "Your time: 124 sec"
align = 1
valign = 1

[node name="EndingTimer" type="Timer" parent="Ending"]

[node name="Effect" type="AudioStreamPlayer" parent="Ending"]
stream = ExtResource( 22 )

[node name="CRT" parent="Ending" instance=ExtResource( 23 )]
visible = false
[connection signal="animation_finished" from="Graphics/Anime" to="." method="_on_Anime_animation_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MusicFader" to="." method="_on_MusicFader_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Ending/EndingTimer" to="." method="_on_EndingTimer_timeout"]
